--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.0.4",
+    "framer-motion": "^11.2.10",
     "next": "^14.2.3",
     "next-video": "^1.0.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.3.0",
